// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`navigation contract > locks the full bilingual navigation content 1`] = `
[
  {
    "footer": {
      "href": "/sell",
      "label": "So verkaufen wir",
      "text": "Bewertung, Vorbereitung und Verkauf – klar geführt von einem lokalen Team.",
    },
    "highlightId": "valuation",
    "id": "sell",
    "label": "Ich will verkaufen",
    "links": [
      {
        "description": "Kostenlose Bewertung – in 3 Minuten",
        "hiddenFromList": false,
        "href": "/property-valuation",
        "icon": "calculator",
        "id": "valuation",
        "label": "Was ist meine Immobilie wert?",
      },
      {
        "description": "Der 10-Schritte-Prozess",
        "hiddenFromList": false,
        "href": "/sell",
        "icon": "home",
        "id": "sell",
        "label": "So verkaufen wir",
      },
      {
        "description": "Trennung, Erbe, Notlage & mehr",
        "hiddenFromList": false,
        "href": "/selling-situations",
        "icon": "heart",
        "id": "situations",
        "label": "Meine Situation",
      },
      {
        "description": "Preise nach Stadtteil ansehen",
        "hiddenFromList": false,
        "href": "/price-atlas",
        "icon": "chart",
        "id": "price-atlas",
        "label": "Preisatlas",
      },
      {
        "description": "Kostenlos & unverbindlich",
        "hiddenFromList": false,
        "href": "/appointment",
        "icon": "calendar",
        "id": "appointment",
        "label": "Erstgespräch buchen",
      },
      {
        "description": "Grundstück, Energie, Familie",
        "hiddenFromList": false,
        "href": {
          "params": {
            "slug": "haus",
          },
          "pathname": "/sell/[slug]",
        },
        "icon": "home",
        "id": "house",
        "label": "Haus verkaufen",
      },
      {
        "description": "WEG, Teilungserklärung",
        "hiddenFromList": false,
        "href": {
          "params": {
            "slug": "wohnung",
          },
          "pathname": "/sell/[slug]",
        },
        "icon": "building",
        "id": "apartment",
        "label": "Wohnung verkaufen",
      },
      {
        "description": "Baurecht & Bodenrichtwert",
        "hiddenFromList": false,
        "href": {
          "params": {
            "slug": "grundstueck",
          },
          "pathname": "/sell/[slug]",
        },
        "icon": "map",
        "id": "land",
        "label": "Grundstück verkaufen",
      },
      {
        "description": "Faktor & Rendite",
        "hiddenFromList": false,
        "href": {
          "params": {
            "slug": "mehrfamilienhaus",
          },
          "pathname": "/sell/[slug]",
        },
        "icon": "landmark",
        "id": "apartment-building",
        "label": "Mehrfamilienhaus verkaufen",
      },
      {
        "description": "Unser Ingenieur misst auf",
        "hiddenFromList": false,
        "href": "/floor-plans",
        "icon": "ruler",
        "id": "living-area",
        "label": "Wohnfläche & Grundrisse",
      },
      {
        "description": "Sucht jemand Ihre Immobilie?",
        "hiddenFromList": false,
        "href": "/buyer-search",
        "icon": "search",
        "id": "active-buyers",
        "label": "Aktive Suchkunden",
      },
      {
        "description": "360°-Rundgang für Ihr Objekt",
        "hiddenFromList": false,
        "href": "/virtual-tour",
        "icon": "video",
        "id": "virtual",
        "label": "Virtuelle Besichtigung",
      },
      {
        "description": "Assistent & Käufer-Matching",
        "hiddenFromList": false,
        "href": "/ai",
        "icon": "bot",
        "id": "ai",
        "label": "Immobilien-KI",
      },
      {
        "description": "Unseriöse Makler erkennen",
        "hiddenFromList": false,
        "href": "/sale-warning-signs",
        "icon": "shield",
        "id": "warning-signs",
        "label": "Warnsignale",
      },
      {
        "description": "Jemanden empfehlen, der verkauft",
        "hiddenFromList": false,
        "href": "/referrers",
        "icon": "users",
        "id": "referrers-sell",
        "label": "Tippgeber",
      },
    ],
  },
  {
    "footer": {
      "href": "/financing",
      "label": "Finanzierung klären",
      "text": "Angebot und Finanzierung früh zusammenbringen.",
    },
    "highlightId": "properties",
    "id": "buy",
    "label": "Ich will kaufen",
    "links": [
      {
        "description": "Suche mit PLZ & Filter",
        "hiddenFromList": false,
        "href": "/buy",
        "icon": "key",
        "id": "properties",
        "label": "Aktuelle Objekte",
      },
      {
        "description": "Dr. Klein · Stefan Vogelsang",
        "hiddenFromList": false,
        "href": "/financing",
        "icon": "banknote",
        "id": "financing",
        "label": "Baufinanzierung",
      },
    ],
  },
  {
    "footer": {
      "href": "/downloads",
      "label": "Downloads ansehen",
      "text": "Marktdaten, Erklärungen und Unterlagen für fundierte Entscheidungen.",
    },
    "highlightId": "price-atlas-knowledge",
    "id": "knowledge",
    "label": "Preise & Wissen",
    "links": [
      {
        "description": "Was 2026 wirklich gezahlt wird",
        "hiddenFromList": false,
        "href": "/market-data",
        "icon": "chart",
        "id": "market-data",
        "label": "Immobilienpreise & Trends",
      },
      {
        "description": "€/m² in der Region",
        "hiddenFromList": false,
        "href": "/market",
        "icon": "banknote",
        "id": "market",
        "label": "Immobilienpreise",
      },
      {
        "description": "Alle Orte im Überblick",
        "hiddenFromList": false,
        "href": "/locations",
        "icon": "map",
        "id": "cities",
        "label": "Städte & Stadtteile",
      },
      {
        "description": "Amtliche Lagewerte",
        "hiddenFromList": false,
        "href": "/land-value",
        "icon": "landmark",
        "id": "land-value",
        "label": "Bodenrichtwert",
      },
      {
        "description": "Wissen für Eigentümer",
        "hiddenFromList": false,
        "href": "/blog",
        "icon": "newspaper",
        "id": "news",
        "label": "Ratgeber & News",
      },
      {
        "description": "77 Fachbegriffe erklärt",
        "hiddenFromList": false,
        "href": "/glossary",
        "icon": "book",
        "id": "glossary",
        "label": "Lexikon A–Z",
      },
      {
        "description": "45 Antworten",
        "hiddenFromList": false,
        "href": "/faq",
        "icon": "circle-help",
        "id": "faq",
        "label": "FAQ",
      },
      {
        "description": "Checklisten & Formulare",
        "hiddenFromList": false,
        "href": "/downloads",
        "icon": "download",
        "id": "downloads",
        "label": "Downloads",
      },
      {
        "description": "Preise nach Stadtteil ansehen",
        "hiddenFromList": true,
        "href": "/price-atlas",
        "icon": "chart",
        "id": "price-atlas-knowledge",
        "label": "Preisatlas",
      },
    ],
  },
  {
    "footer": {
      "href": "/contact",
      "label": "Kontakt aufnehmen",
      "text": "Persönlich, regional und nachvollziehbar erreichbar.",
    },
    "highlightId": "references",
    "id": "company",
    "label": "Immonation",
    "links": [
      {
        "description": "Inhabergeführt seit 2017, kein Franchise",
        "hiddenFromList": false,
        "href": "/about",
        "icon": "users",
        "id": "about",
        "label": "Wer wir sind",
      },
      {
        "description": "Echte Verkäufe zum Durchblättern",
        "hiddenFromList": false,
        "href": "/magazine",
        "icon": "book",
        "id": "magazine",
        "label": "REVIER Magazin",
      },
      {
        "description": "Echte Kundengeschichten",
        "hiddenFromList": false,
        "href": "/references",
        "icon": "building",
        "id": "references",
        "label": "Referenzen",
      },
      {
        "description": "Das Archiv",
        "hiddenFromList": false,
        "href": "/sold",
        "icon": "home",
        "id": "sold",
        "label": "Verkaufte Objekte",
      },
      {
        "description": "4,9 aus 223",
        "hiddenFromList": false,
        "href": "/reviews",
        "icon": "star",
        "id": "reviews",
        "label": "Bewertungen",
      },
      {
        "description": "Einzeln nachlesen",
        "hiddenFromList": false,
        "href": "/testimonials",
        "icon": "heart",
        "id": "testimonials",
        "label": "Kundenstimmen",
      },
      {
        "description": "TOP Makler 2026",
        "hiddenFromList": false,
        "href": "/awards",
        "icon": "award",
        "id": "awards",
        "label": "Auszeichnungen",
      },
      {
        "description": "TSV Zirndorf & Uganda",
        "hiddenFromList": false,
        "href": "/engagement",
        "icon": "heart",
        "id": "engagement",
        "label": "Engagement",
      },
      {
        "description": "4 Gesellschaften",
        "hiddenFromList": false,
        "href": "/group",
        "icon": "building",
        "id": "group",
        "label": "Unternehmensgruppe",
      },
      {
        "description": "Makler werden",
        "hiddenFromList": false,
        "href": "/careers",
        "icon": "briefcase",
        "id": "careers",
        "label": "Karriere",
      },
      {
        "description": "Geprüfte Partner – zwei Modelle",
        "hiddenFromList": false,
        "href": "/partners",
        "icon": "users",
        "id": "partners",
        "label": "Partnermakler",
      },
      {
        "description": "Empfehlen & profitieren",
        "hiddenFromList": false,
        "href": "/referrers",
        "icon": "sparkles",
        "id": "referrers-company",
        "label": "Tippgeber",
      },
      {
        "description": "Mo–Fr 9–18 · Sa 10:30–14",
        "hiddenFromList": false,
        "href": "/contact",
        "icon": "map",
        "id": "contact",
        "label": "Kontakt & Anfahrt",
      },
    ],
  },
]
`;

exports[`navigation contract > locks the full bilingual navigation content 2`] = `
[
  {
    "footer": {
      "href": "/sell",
      "label": "How we sell",
      "text": "Valuation, preparation and sale — clearly guided by a local team.",
    },
    "highlightId": "valuation",
    "id": "sell",
    "label": "I want to sell",
    "links": [
      {
        "description": "Free valuation — in three minutes",
        "hiddenFromList": false,
        "href": "/property-valuation",
        "icon": "calculator",
        "id": "valuation",
        "label": "What is my property worth?",
      },
      {
        "description": "Our ten-step process",
        "hiddenFromList": false,
        "href": "/sell",
        "icon": "home",
        "id": "sell",
        "label": "How we sell",
      },
      {
        "description": "Separation, inheritance, hardship and more",
        "hiddenFromList": false,
        "href": "/selling-situations",
        "icon": "heart",
        "id": "situations",
        "label": "My situation",
      },
      {
        "description": "Explore prices by district",
        "hiddenFromList": false,
        "href": "/price-atlas",
        "icon": "chart",
        "id": "price-atlas",
        "label": "Price atlas",
      },
      {
        "description": "Free and non-binding",
        "hiddenFromList": false,
        "href": "/appointment",
        "icon": "calendar",
        "id": "appointment",
        "label": "Book an initial call",
      },
      {
        "description": "Land, energy and family needs",
        "hiddenFromList": false,
        "href": {
          "params": {
            "slug": "house",
          },
          "pathname": "/sell/[slug]",
        },
        "icon": "home",
        "id": "house",
        "label": "Sell a house",
      },
      {
        "description": "Owners association and declaration of division",
        "hiddenFromList": false,
        "href": {
          "params": {
            "slug": "apartment",
          },
          "pathname": "/sell/[slug]",
        },
        "icon": "building",
        "id": "apartment",
        "label": "Sell an apartment",
      },
      {
        "description": "Planning law and standard land value",
        "hiddenFromList": false,
        "href": {
          "params": {
            "slug": "land",
          },
          "pathname": "/sell/[slug]",
        },
        "icon": "map",
        "id": "land",
        "label": "Sell land",
      },
      {
        "description": "Multiplier and yield",
        "hiddenFromList": false,
        "href": {
          "params": {
            "slug": "apartment-building",
          },
          "pathname": "/sell/[slug]",
        },
        "icon": "landmark",
        "id": "apartment-building",
        "label": "Sell an apartment building",
      },
      {
        "description": "Surveyed by our in-house engineer",
        "hiddenFromList": false,
        "href": "/floor-plans",
        "icon": "ruler",
        "id": "living-area",
        "label": "Living area & floor plans",
      },
      {
        "description": "Is someone looking for your property?",
        "hiddenFromList": false,
        "href": "/buyer-search",
        "icon": "search",
        "id": "active-buyers",
        "label": "Active buyers",
      },
      {
        "description": "A 360° tour for your property",
        "hiddenFromList": false,
        "href": "/virtual-tour",
        "icon": "video",
        "id": "virtual",
        "label": "Virtual viewing",
      },
      {
        "description": "Assistant and buyer matching",
        "hiddenFromList": false,
        "href": "/ai",
        "icon": "bot",
        "id": "ai",
        "label": "Property AI",
      },
      {
        "description": "Recognise unreliable agents",
        "hiddenFromList": false,
        "href": "/sale-warning-signs",
        "icon": "shield",
        "id": "warning-signs",
        "label": "Warning signs",
      },
      {
        "description": "Refer someone who wants to sell",
        "hiddenFromList": false,
        "href": "/referrers",
        "icon": "users",
        "id": "referrers-sell",
        "label": "Referrers",
      },
    ],
  },
  {
    "footer": {
      "href": "/financing",
      "label": "Explore financing",
      "text": "Bring the property and financing together early.",
    },
    "highlightId": "properties",
    "id": "buy",
    "label": "I want to buy",
    "links": [
      {
        "description": "Search by postcode and filters",
        "hiddenFromList": false,
        "href": "/buy",
        "icon": "key",
        "id": "properties",
        "label": "Current properties",
      },
      {
        "description": "Dr. Klein · Stefan Vogelsang",
        "hiddenFromList": false,
        "href": "/financing",
        "icon": "banknote",
        "id": "financing",
        "label": "Property financing",
      },
    ],
  },
  {
    "footer": {
      "href": "/downloads",
      "label": "View downloads",
      "text": "Market data, explanations and documents for informed decisions.",
    },
    "highlightId": "price-atlas-knowledge",
    "id": "knowledge",
    "label": "Prices & knowledge",
    "links": [
      {
        "description": "What buyers actually pay in 2026",
        "hiddenFromList": false,
        "href": "/market-data",
        "icon": "chart",
        "id": "market-data",
        "label": "Property prices & trends",
      },
      {
        "description": "Prices per square metre in the region",
        "hiddenFromList": false,
        "href": "/market",
        "icon": "banknote",
        "id": "market",
        "label": "Property prices",
      },
      {
        "description": "All locations at a glance",
        "hiddenFromList": false,
        "href": "/locations",
        "icon": "map",
        "id": "cities",
        "label": "Cities & districts",
      },
      {
        "description": "Official location values",
        "hiddenFromList": false,
        "href": "/land-value",
        "icon": "landmark",
        "id": "land-value",
        "label": "Standard land value",
      },
      {
        "description": "Knowledge for property owners",
        "hiddenFromList": false,
        "href": "/blog",
        "icon": "newspaper",
        "id": "news",
        "label": "Guides & news",
      },
      {
        "description": "77 specialist terms explained",
        "hiddenFromList": false,
        "href": "/glossary",
        "icon": "book",
        "id": "glossary",
        "label": "Glossary A–Z",
      },
      {
        "description": "45 answers",
        "hiddenFromList": false,
        "href": "/faq",
        "icon": "circle-help",
        "id": "faq",
        "label": "FAQ",
      },
      {
        "description": "Checklists and forms",
        "hiddenFromList": false,
        "href": "/downloads",
        "icon": "download",
        "id": "downloads",
        "label": "Downloads",
      },
      {
        "description": "Explore prices by district",
        "hiddenFromList": true,
        "href": "/price-atlas",
        "icon": "chart",
        "id": "price-atlas-knowledge",
        "label": "Price atlas",
      },
    ],
  },
  {
    "footer": {
      "href": "/contact",
      "label": "Contact us",
      "text": "Personal, regional and easy to reach.",
    },
    "highlightId": "references",
    "id": "company",
    "label": "Immonation",
    "links": [
      {
        "description": "Owner-managed since 2017, not a franchise",
        "hiddenFromList": false,
        "href": "/about",
        "icon": "users",
        "id": "about",
        "label": "Who we are",
      },
      {
        "description": "Real sales to browse",
        "hiddenFromList": false,
        "href": "/magazine",
        "icon": "book",
        "id": "magazine",
        "label": "REVIER magazine",
      },
      {
        "description": "Real client stories",
        "hiddenFromList": false,
        "href": "/references",
        "icon": "building",
        "id": "references",
        "label": "References",
      },
      {
        "description": "The archive",
        "hiddenFromList": false,
        "href": "/sold",
        "icon": "home",
        "id": "sold",
        "label": "Sold properties",
      },
      {
        "description": "4.9 out of 223",
        "hiddenFromList": false,
        "href": "/reviews",
        "icon": "star",
        "id": "reviews",
        "label": "Reviews",
      },
      {
        "description": "Read individual stories",
        "hiddenFromList": false,
        "href": "/testimonials",
        "icon": "heart",
        "id": "testimonials",
        "label": "Testimonials",
      },
      {
        "description": "TOP Agent 2026",
        "hiddenFromList": false,
        "href": "/awards",
        "icon": "award",
        "id": "awards",
        "label": "Awards",
      },
      {
        "description": "TSV Zirndorf and Uganda",
        "hiddenFromList": false,
        "href": "/engagement",
        "icon": "heart",
        "id": "engagement",
        "label": "Community",
      },
      {
        "description": "Four companies",
        "hiddenFromList": false,
        "href": "/group",
        "icon": "building",
        "id": "group",
        "label": "Company group",
      },
      {
        "description": "Become an estate agent",
        "hiddenFromList": false,
        "href": "/careers",
        "icon": "briefcase",
        "id": "careers",
        "label": "Careers",
      },
      {
        "description": "Verified partners — two models",
        "hiddenFromList": false,
        "href": "/partners",
        "icon": "users",
        "id": "partners",
        "label": "Partner agents",
      },
      {
        "description": "Refer and benefit",
        "hiddenFromList": false,
        "href": "/referrers",
        "icon": "sparkles",
        "id": "referrers-company",
        "label": "Referrers",
      },
      {
        "description": "Mon–Fri 9–18 · Sat 10:30–14",
        "hiddenFromList": false,
        "href": "/contact",
        "icon": "map",
        "id": "contact",
        "label": "Contact & directions",
      },
    ],
  },
]
`;
